# RFObserver

./: .gitignore  LICENSE  README.md  bench_processing.py  pyproject.toml
.github/workflows/: build.yml  ci.yml  release.yml
deploy/: install.sh  rfobserver.env.example  rfobserver.service
docker/: Dockerfile  Dockerfile.jetson  docker-compose.yml
docs/: implementation_plan.md
docs/superpowers/plans/: 2026-07-08-sensor-active-toggle.md  2026-07-10-recording-memory-safety.md  2026-07-15-burst-waveform-matrix.md  2026-07-21-ota-burst-validation.md
docs/superpowers/specs/: 2026-07-08-sensor-active-toggle-design.md  2026-07-10-recording-memory-safety-design.md  2026-07-15-burst-waveform-matrix-design.md  2026-07-21-ota-burst-validation-design.md  2026-07-22-tone-check-design.md
src/rfobserver/: __init__.py  __main__.py  cli.py  config.py  models.py
src/rfobserver/capture/: buffer.py  mock_receiver.py  receiver.py  trigger.py
src/rfobserver/metrics/: prometheus.py
src/rfobserver/modules/: __init__.py  base.py  fm_demod.py  manager.py
src/rfobserver/pipeline/: app.py  continuous.py  streaming.py  supervisor.py  sweep.py
src/rfobserver/processing/: burst.py  detection.py  iq_utils.py  rolling_burst.py  spectral.py  tone_check.py
src/rfobserver/storage/: archiver.py  database.py  local.py  psd_grid.py
src/rfobserver/transport/: nats_producer.py  publisher.py
src/rfobserver/utils/: hardware.py  scheduler.py  watchdog.py
src/rfobserver/web/: app.py  websocket.py
src/rfobserver/web/routes/: api.py  captures.py  config.py  dashboard.py  history.py  modules.py
src/rfobserver/web/static/: audio-worklet.js  shared-charts.js  style.css
src/rfobserver/web/templates/: base.html  captures.html  config.html  dashboard.html  history.html
src/rfobserver/zms/: client.py  monitor.py  sigmf_formatter.py
tests/: conftest.py
tests/integration/: _synth.py  test_burst_detection.py  test_burst_overlay_render.py  test_burst_waveform_matrix.py  test_config_live.py  test_pipeline.py  test_recording_grids.py  test_synth_helpers.py  test_web_integration.py
tests/unit/: test_buffer.py  test_burst.py  test_config.py  test_database.py  test_detection.py  test_iq_utils.py  test_local_storage.py  test_models.py  test_nats_producer.py  test_ota_common.py  test_ota_validate.py  test_pipeline_wiring.py  test_psd_grid.py  test_receiver_close.py  test_recording_cap.py  test_rolling_burst.py  test_sigmf_formatter.py  test_spectral.py  test_streaming.py  test_supervisor.py  test_tone_check.py  test_trigger.py  test_web_routes.py  test_zms_client.py  test_zms_monitor.py
tools/: ota_common.py  ota_tx.py  ota_validate.py
